feat(): add new pages

--- a/apps/apm-ssr/src/app/pages/home-page/home/home.component.html
+++ b/apps/apm-ssr/src/app/pages/home-page/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+
+<h1>SSR APM instrumentation POC</h1>
+<nav class="hero-card">
+  Welcome, you can go to :
+  <a href="/">Home page</a>, 
+  <a routerLink="/demo">Demo Page</a>,
+  <a routerLink="/login">Login Page</a>,
+  <a routerLink="/consent">Consent Page</a>
+</nav>
