--- a/apps/apm-ssr/src/styles.scss
+++ b/apps/apm-ssr/src/styles.scss
@@ -1,25 +1,25 @@
 // Custom Theming for Angular Material
+@use '~@angular/material' as mat;
 // For more information: https://material.angular.io/guide/theming
-@import "~@angular/material/theming";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$apm-ssr-primary: mat-palette($mat-indigo);
-$apm-ssr-accent: mat-palette($mat-pink, A200, A100, A400);
+$apm-ssr-primary: mat.define-palette(mat.$indigo-palette);
+$apm-ssr-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$apm-ssr-warn: mat-palette($mat-red);
+$apm-ssr-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$apm-ssr-theme: mat-light-theme(
+$apm-ssr-theme: mat.define-light-theme(
   (
     color: (
       primary: $apm-ssr-primary,
@@ -32,7 +32,7 @@ $apm-ssr-theme: mat-light-theme(
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($apm-ssr-theme);
+@include mat.all-component-themes($apm-ssr-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
